# PhotorImg

./: .gitignore  CMakeCache.txt  CMakeLists.txt  ImageRegistration  ImageRegistration.cbp  ImageRegistration.ld_YjfGti  Makefile  StarImage.cpp  StarImage.cpp.bak  StarImage.h  StarImage.h.bak  StarImagePart.cpp  StarImagePart.cpp.bak  StarImagePart.h  StarImagePart.h.bak  StarImageRegistBuilder.cpp  StarImageRegistBuilder.cpp.bak  StarImageRegistBuilder.h  StarImageRegistBuilder.h.bak  Util.cpp  Util.h  cmake_install.cmake  main.cpp
